testsuite/tests/ghci/should_fail/T16013.script
:set -XTypeFamilies -XPolyKinds
type family Id (a :: k)
type instance Id @Data.Kind.Type a = a
type Foo x = Maybe
:kind! Id Foo
